# healthy_meal_planner

./: .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  app.local.properties  application.properties  architecture.md  database_url.txt  dev_phase.md  docker-compose.yml  flow.md  free_vs_paid.md  free_vs_paid_implementation_plan.md  index.html  ingredient_parser_design.md  ingredient_parser_review.md  mealplan-app.jsx  planning.md  pyproject.toml  review.md  smtp-from.txt  smtp-host.txt  smtp-password.txt  smtp-user.txt  user_flow.md  user_flow_full.md
backend/: Dockerfile  config.py  constants.py  data.py  db.py  main.py  package-lock.json  package.json  pyproject.toml  schemas.py  security.py  utils.py
backend/routers/: admin.py  auth.py  caretakers.py  dishes.py  favourites.py  health.py  health_metrics.py  mealplan.py  shopping_list.py  thresholds.py  users.py
backend/services/: core.py  dish_candidate.py  ingredient_categories.py  inputs.py  models.py  nutrient_calculator.py  profile_loader.py  recommendation_engine.py  shopping_list_generator.py
backend/services/solver/: __init__.py  core.py  inputs.py  models.py
backend/src/: config.py  constants.py  db.js  main.py  schemas.py  security.py  server.js
backend/src/data/: conditionRules.js  dishes.js  ingredients.js  recipes.js
backend/src/routers/: auth.py  dishes.py  shopping_list.py
backend/src/routes/: caretakers.js  dishes.js  mealplan.js  shoppingList.js  users.js
backend/src/services/: core.py  inputs.py  models.py  nutrientCalculator.js  nutrient_calculator.py  (+2 more)
docs/: report.tex  (+3 more)
(+73 files in other folders)
