[project]
name = "mealvitals"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.133.0",
    "ortools",
    "psycopg[binary]>=3.2.3",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
